use static constants for "utf-8"